crates/oxc_angular_compiler/tests/snapshots/linker_test__link_control_feature_null_pass_through_input.snap
---
source: crates/oxc_angular_compiler/tests/linker_test.rs
expression: result.code
---
import * as i0 from "@angular/core";
export class MyControl {}
MyControl.ɵdir = i0.ɵɵdefineDirective({ type: MyControl, selectors: [["", "myControl", ""]], signals: true, features: [i0.ɵɵControlFeature(null)] });
