crates/oxc_angular_compiler/tests/snapshots/linker_test__link_outputs_simple_identifier.snap
---
source: crates/oxc_angular_compiler/tests/linker_test.rs
assertion_line: 87
expression: result.code
---
import * as i0 from "@angular/core";
export class MyDir {}
MyDir.ɵdir = i0.ɵɵdefineDirective({ type: MyDir, selectors: [["", "myDir", ""]], outputs: { activate: "activate" }, standalone: false });
